tests/programs/a1/local/invalid/test_throws.java
public class test_throws {
  public A() {}
  public int m() throws java.lang.Exception {
    return 42;
  }
}